Update nopcommerce Maven project
+ Add new page object class for User Product Comparison Page
+ Add new TC_04_Add_Product_To_Compare in
TC_Wishlist_Compare_Recent_View
+ Add new functions to compare Element List and String list
+ Add new functions to add and navigate to User Product Comparison Page
on Product Page

--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--871765442\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-171997568\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Wishlist_Compare_Recent_View" class="method navigator-link" hash-for-method="TC_03_Check_Empty_Wishlist(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lan...)">TC_03_Check_Empty_Wishlist(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lan...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Wishlist_Compare_Recent_View" class="method navigator-link" hash-for-method="TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)">TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_03_Check_Empty_Wishlist(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lan...)">
-                  </a> <!-- TC_03_Check_Empty_Wishlist(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lan...) -->
-                  <span class="method-name">TC_03_Check_Empty_Wishlist</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lang.reflect.Method))</span>
+                  <a name="TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)">
+                  </a> <!-- TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...) -->
+                  <span class="method-name">TC_04_Add_Product_To_Compare</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.lang.reflect.Method))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--871765442\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-171997568\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_03_Check_Empty_Wishlist')
+data.setCell(0, 1, 'TC_04_Add_Product_To_Compare')
 data.setCell(0, 2, 'com.nopcommerce.user.TC_Wishlist_Compare_Recent_View')
-data.setCell(0, 3, 3541);
+data.setCell(0, 3, 6603);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,19 +227,19 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">28 ms</span>
+                <span class="method-start">24 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_03_Check_Empty_Wishlist(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lan...)</span>
-                <span class="method-start">6411 ms</span>
+                <span class="method-name">TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)</span>
+                <span class="method-start">6149 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">10000 ms</span>
+                <span class="method-start">12799 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">10685 ms</span>
+                <span class="method-start">13478 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
