Update Nopcommerce Maven Hybrid Framework
+ Add new TC_05_Check_Recently_View_Product to
TC_Wishlist_Compare_Recent_View
+ Add new TC_Order
+ Add new UserRecentlyViewProductPageObject POM for Recently View page
+ Add function to update product details on Product page
+ Add function to verify product details on Product Cart page

--- a/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/classes.html
@@ -4,34 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.TC_Sort_Display_Paging</td>
+<td>com.nopcommerce.user.TC_Wishlist_Compare_Recent_View</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_03_Sort_High_To_Low</td>
+<td>TC_03_Check_Empty_Wishlist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Sort_A_To_Z</td>
+<td>TC_01_Add_To_Wishlist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_05_Display_6_Value</td>
+<td>TC_04_Add_Product_To_Compare</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_06_Display_9_Value</td>
+<td>TC_05_Check_Recently_View_Product</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_02_Sort_Low_To_High</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_04_Display_3_Value</td>
+<td>TC_02_Add_To_Product_Cart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
