--- a/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods-alphabetical.html
@@ -1,26 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce.User</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:17:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_01_Sort_A_To_Z</td> 
-  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:17:53</td>   <td>777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_02_Sort_Low_To_High</td> 
-  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:17:53</td>   <td>1425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_03_Sort_High_To_Low(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_03_Sort_High_To_Low</td> 
-  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:17:54</td>   <td>2058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_04_Display_3_Value</td> 
-  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:18:25</td>   <td>33224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_05_Display_6_Value</td> 
-  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:18:37</td>   <td>44954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_06_Display_9_Value</td> 
-  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:18:42</td>   <td>50597</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_Display_Paging.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="ac6eae">  <td>22/05/31 22:17:40</td>   <td>-11419</td> <td>&nbsp;</td><td title="&gt;&gt;Common_RegisterToSystem.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@6869a3b3]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="e26e6b">  <td>22/05/31 22:17:48</td>   <td>-3997</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_Display_Paging.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
-<tr bgcolor="ab988f">  <td>22/05/31 22:17:40</td>   <td>-11447</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@6869a3b3]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125903542</td>   <td></td> </tr>
-<tr bgcolor="ab988f">  <td>22/05/31 22:18:43</td>   <td>51496</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@6869a3b3]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125903542</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_01_Add_To_Wishlist(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">TC_01_Add_To_Wishlist</td> 
+  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:17</td>   <td>11076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_02_Add_To_Product_Cart(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">TC_02_Add_To_Product_Cart</td> 
+  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:30</td>   <td>23563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">TC_03_Check_Empty_Wishlist</td> 
+  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:32</td>   <td>26006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">TC_04_Add_Product_To_Compare</td> 
+  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:39</td>   <td>33294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_05_Check_Recently_View_Product(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">TC_05_Check_Recently_View_Product</td> 
+  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:42</td>   <td>36165</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Wishlist_Compare_Recent_View.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="ab846d">  <td>22/06/04 22:52:55</td>   <td>-10945</td> <td>&nbsp;</td><td title="&gt;&gt;Common_RegisterToSystem.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@f3021cb]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="8693ae">  <td>22/06/04 22:53:03</td>   <td>-3591</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Wishlist_Compare_Recent_View.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@4aaae508]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@720760406</td>   <td></td> </tr>
+<tr bgcolor="ad7f76">  <td>22/06/04 22:52:55</td>   <td>-10977</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@f3021cb]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1494794848</td>   <td></td> </tr>
+<tr bgcolor="ad7f76">  <td>22/06/04 22:53:43</td>   <td>37100</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@f3021cb]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1494794848</td>   <td></td> </tr>
 </table>
