--- a/com.hybrid.nopcommerce/test-output/emailable-report.html
+++ b/com.hybrid.nopcommerce/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">13,451</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">17,288</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.TC_Wishlist_Compare_Recent_View</td><td><a href="#m0">TC_04_Add_Product_To_Compare</a></td><td rowspan="1">1654273372400</td><td rowspan="1">6603</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.TC_Order</td><td><a href="#m0">TC_03_Register_Sucessfully</a></td><td rowspan="1">1654362809691</td><td rowspan="1">10235</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.nopcommerce.user.TC_Wishlist_Compare_Recent_View#TC_04_Add_Product_To_Compare</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.lang.reflect.Method)</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.nopcommerce.user.TC_Order#TC_03_Register_Sucessfully</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method)</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
