--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-171997568\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--297604566\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Wishlist_Compare_Recent_View" class="method navigator-link" hash-for-method="TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)">TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Order" class="method navigator-link" hash-for-method="TC_03_Register_Sucessfully(public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method))">TC_03_Register_Sucessfully(public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method))</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,15 +120,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.TC_Wishlist_Compare_Recent_View</span>
+              <span class="class-name">com.nopcommerce.user.TC_Order</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)">
-                  </a> <!-- TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...) -->
-                  <span class="method-name">TC_04_Add_Product_To_Compare</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.lang.reflect.Method))</span>
+                  <a name="TC_03_Register_Sucessfully(public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method))">
+                  </a> <!-- TC_03_Register_Sucessfully(public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method)) -->
+                  <span class="method-name">TC_03_Register_Sucessfully</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-171997568\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--297604566\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.TC_Wishlist_Compare_Recent_View&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.TC_Order&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_04_Add_Product_To_Compare')
-data.setCell(0, 2, 'com.nopcommerce.user.TC_Wishlist_Compare_Recent_View')
-data.setCell(0, 3, 6603);
+data.setCell(0, 1, 'TC_03_Register_Sucessfully')
+data.setCell(0, 2, 'com.nopcommerce.user.TC_Order')
+data.setCell(0, 3, 10235);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,26 +220,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.TC_Wishlist_Compare_Recent_View</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.TC_Order</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuit</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-start">30 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_04_Add_Product_To_Compare(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.l...)</span>
-                <span class="method-start">6149 ms</span>
+                <span class="method-name">TC_03_Register_Sucessfully(public void com.nopcommerce.user.TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method))</span>
+                <span class="method-start">6370 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">12799 ms</span>
+                <span class="method-start">16650 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">13478 ms</span>
+                <span class="method-start">17320 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
