--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77f693">  <td>22/06/03 23:22:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_04_Add_Product_To_Compare(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@3c6aa04a]">TC_04_Add_Product_To_Compare</td> 
-  <td>main@929985841</td>   <td></td> </tr>
-<tr bgcolor="77f693">  <td>22/06/03 23:22:59</td>   <td>6650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Wishlist_Compare_Recent_View.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@3c6aa04a]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@929985841</td>   <td></td> </tr>
-<tr bgcolor="77f693">  <td>22/06/03 23:22:46</td>   <td>-6125</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Wishlist_Compare_Recent_View.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@3c6aa04a]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@929985841</td>   <td></td> </tr>
-<tr bgcolor="a3acc8">  <td>22/06/03 23:22:46</td>   <td>-6145</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@3c6aa04a]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@929985841</td>   <td></td> </tr>
-<tr bgcolor="a3acc8">  <td>22/06/03 23:22:59</td>   <td>7329</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@3c6aa04a]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@929985841</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/06/05 00:13:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">TC_03_Register_Sucessfully</td> 
+  <td>main@1311884268</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/06/05 00:13:39</td>   <td>10280</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/06/05 00:13:23</td>   <td>-6339</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
+<tr bgcolor="6bfb84">  <td>22/06/05 00:13:23</td>   <td>-6363</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
+<tr bgcolor="6bfb84">  <td>22/06/05 00:13:40</td>   <td>10950</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
 </table>
