Update NopCommerce Maven Hybrid Framework
+ Add new TC:TC_02_Edit_Product, TC_03_Remove_Product,
TC_04_Update_Product_Quantity to TC_Order
+ Add new function to convert string to float on BasePage
+ Add new dynamic xpath and functions to get data from table on
UserProductCartPageObject

--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6bfb84">  <td>22/06/05 00:13:23</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/06/05 00:13:23</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/06/05 00:13:29</td>   <td>6363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_03_Register_Sucessfully(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">TC_03_Register_Sucessfully</td> 
-  <td>main@1311884268</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/06/05 00:13:39</td>   <td>16643</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
-<tr bgcolor="6bfb84">  <td>22/06/05 00:13:40</td>   <td>17313</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@1aa99005]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1311884268</td>   <td></td> </tr>
+<tr bgcolor="9ab297">  <td>22/06/06 00:17:52</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
+<tr bgcolor="a29992">  <td>22/06/06 00:17:52</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
+<tr bgcolor="a29992">  <td>22/06/06 00:17:58</td>   <td>6370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">TC_04_Update_Product_Quantity</td> 
+  <td>main@1843459456</td>   <td></td> </tr>
+<tr bgcolor="a29992">  <td>22/06/06 00:18:03</td>   <td>11485</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
+<tr bgcolor="9ab297">  <td>22/06/06 00:18:04</td>   <td>12152</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
 </table>
