--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a29992">  <td>22/06/06 00:17:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_04_Update_Product_Quantity(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">TC_04_Update_Product_Quantity</td> 
-  <td>main@1843459456</td>   <td></td> </tr>
-<tr bgcolor="a29992">  <td>22/06/06 00:18:03</td>   <td>5115</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
-<tr bgcolor="a29992">  <td>22/06/06 00:17:52</td>   <td>-6350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
-<tr bgcolor="9ab297">  <td>22/06/06 00:17:52</td>   <td>-6370</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
-<tr bgcolor="9ab297">  <td>22/06/06 00:18:04</td>   <td>5782</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@16073fa8]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1843459456</td>   <td></td> </tr>
+<tr bgcolor="9b6ade">  <td>22/06/06 23:25:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Order.TC_05_Update_Product_Quantity(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Order@14379273]">TC_05_Update_Product_Quantity</td> 
+  <td>main@1491676195</td>   <td></td> </tr>
+<tr bgcolor="9b6ade">  <td>22/06/06 23:25:22</td>   <td>14380</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Order.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Order@14379273]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1491676195</td>   <td></td> </tr>
+<tr bgcolor="9b6ade">  <td>22/06/06 23:25:01</td>   <td>-6157</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Order.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Order@14379273]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1491676195</td>   <td></td> </tr>
+<tr bgcolor="79c3d9">  <td>22/06/06 23:25:01</td>   <td>-6178</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Order@14379273]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1491676195</td>   <td></td> </tr>
+<tr bgcolor="79c3d9">  <td>22/06/06 23:25:23</td>   <td>15054</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Order@14379273]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1491676195</td>   <td></td> </tr>
 </table>
