Update hybrid maven framework
Add new test cases and classes for Bank Guru:
+ Testcase: TC_Login
+ PageUI: GenerateCredentialPageUI, HomePageUI, LoginPageUI
+ PageObject: GenerateCredentialPageObject, HomePageObject,
LoginPageObject
+ Common: PageGeneratorManagerBankGuru

--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97a9a2">  <td>22/06/13 00:09:57</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@45019084</td>   <td></td> </tr>
-<tr bgcolor="c97b84">  <td>22/06/13 00:09:57</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Login.beforeClass()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@45019084</td>   <td></td> </tr>
-<tr bgcolor="c97b84">  <td>22/06/13 00:10:00</td>   <td>2580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_01_Login_Empty_Username_Password()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">TC_01_Login_Empty_Username_Password</td> 
-  <td>main@45019084</td>   <td></td> </tr>
-<tr bgcolor="c97b84">  <td>22/06/13 00:10:01</td>   <td>4131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_02_Login_Not_Exist_Username()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">TC_02_Login_Not_Exist_Username</td> 
-  <td>main@45019084</td>   <td></td> </tr>
-<tr bgcolor="c97b84">  <td>22/06/13 00:10:02</td>   <td>4944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_03_Login_Invalid_Password()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">TC_03_Login_Invalid_Password</td> 
-  <td>main@45019084</td>   <td></td> </tr>
-<tr bgcolor="c97b84">  <td>22/06/13 00:10:03</td>   <td>5789</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Login.afterClass()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@45019084</td>   <td></td> </tr>
-<tr bgcolor="97a9a2">  <td>22/06/13 00:10:04</td>   <td>6426</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.wordpress.portal.TC_Login@5411dd90]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@45019084</td>   <td></td> </tr>
+<tr bgcolor="cac990">  <td>22/08/31 01:02:32</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@35874744</td>   <td></td> </tr>
+<tr bgcolor="91796b">  <td>22/08/31 01:02:32</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Login.beforeClass()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@35874744</td>   <td></td> </tr>
+<tr bgcolor="91796b">  <td>22/08/31 01:02:40</td>   <td>8681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_01_Login_Successfully()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">TC_01_Login_Successfully</td> 
+  <td>main@35874744</td>   <td></td> </tr>
+<tr bgcolor="cac990">  <td>22/08/31 01:02:43</td>   <td>11167</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@35874744</td>   <td></td> </tr>
 </table>
