Update Maven Test Framework for Bank Guru
+ Add Adblock extension to chrome browser
+ Update test case to include testing for empty/invalid login

--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-1735348172\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1223936594\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_01_Login_Successfully">TC_01_Login_Successfully</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_01_Login_Empty_Username_Password">TC_01_Login_Empty_Username_Password</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_02_Login_Incorrect_Username_Password">TC_02_Login_Incorrect_Username_Password</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_03_Login_Successfully">TC_03_Login_Successfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +135,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Login_Successfully">
-                  </a> <!-- TC_01_Login_Successfully -->
-                  <span class="method-name">TC_01_Login_Successfully</span>
+                  <a name="TC_01_Login_Empty_Username_Password">
+                  </a> <!-- TC_01_Login_Empty_Username_Password -->
+                  <span class="method-name">TC_01_Login_Empty_Username_Password</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_02_Login_Incorrect_Username_Password">
+                  </a> <!-- TC_02_Login_Incorrect_Username_Password -->
+                  <span class="method-name">TC_02_Login_Incorrect_Username_Password</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC_03_Login_Successfully">
+                  </a> <!-- TC_03_Login_Successfully -->
+                  <span class="method-name">TC_03_Login_Successfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-1735348172\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1223936594\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_01_Login_Successfully')
+data.setCell(0, 1, 'TC_03_Login_Successfully')
 data.setCell(0, 2, 'com.bankguru.TC_Login')
-data.setCell(0, 3, 2413);
+data.setCell(0, 3, 2091);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'TC_02_Login_Incorrect_Username_Password')
+data.setCell(1, 2, 'com.bankguru.TC_Login')
+data.setCell(1, 3, 1392);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'TC_01_Login_Empty_Username_Password')
+data.setCell(2, 2, 'com.bankguru.TC_Login')
+data.setCell(2, 3, 439);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,15 +258,27 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">32 ms</span>
+                <span class="method-start">30 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Login_Successfully</span>
-                <span class="method-start">8692 ms</span>
+                <span class="method-name">TC_01_Login_Empty_Username_Password</span>
+                <span class="method-start">13380 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_02_Login_Incorrect_Username_Password</span>
+                <span class="method-start">13863 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TC_03_Login_Successfully</span>
+                <span class="method-start">15257 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">afterClass</span>
+                <span class="method-start">17349 ms</span>
+              </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">11178 ms</span>
+                <span class="method-start">18051 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
