--- a/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
@@ -11,7 +11,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Login_Successfully</td>
+<td>TC_01_Login_Empty_Username_Password</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_02_Login_Incorrect_Username_Password</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_03_Login_Successfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -29,4 +37,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterClass</td>
+<td>&nbsp;</td></tr>
 </table>
