--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="91796b">  <td>22/08/31 01:02:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_01_Login_Successfully()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">TC_01_Login_Successfully</td> 
-  <td>main@35874744</td>   <td></td> </tr>
-<tr bgcolor="91796b">  <td>22/08/31 01:02:32</td>   <td>-8660</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Login.beforeClass()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@35874744</td>   <td></td> </tr>
-<tr bgcolor="cac990">  <td>22/08/31 01:02:32</td>   <td>-8681</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@35874744</td>   <td></td> </tr>
-<tr bgcolor="cac990">  <td>22/08/31 01:02:43</td>   <td>2486</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.bankguru.TC_Login@ba354ca]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@35874744</td>   <td></td> </tr>
+<tr bgcolor="b86b88">  <td>22/09/12 00:01:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_01_Login_Empty_Username_Password()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">TC_01_Login_Empty_Username_Password</td> 
+  <td>main@1330411679</td>   <td></td> </tr>
+<tr bgcolor="b86b88">  <td>22/09/12 00:01:10</td>   <td>483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_02_Login_Incorrect_Username_Password()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">TC_02_Login_Incorrect_Username_Password</td> 
+  <td>main@1330411679</td>   <td></td> </tr>
+<tr bgcolor="b86b88">  <td>22/09/12 00:01:12</td>   <td>1877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_03_Login_Successfully()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">TC_03_Login_Successfully</td> 
+  <td>main@1330411679</td>   <td></td> </tr>
+<tr bgcolor="b86b88">  <td>22/09/12 00:01:14</td>   <td>3969</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Login.afterClass()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1330411679</td>   <td></td> </tr>
+<tr bgcolor="b86b88">  <td>22/09/12 00:00:56</td>   <td>-13350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Login.beforeClass()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1330411679</td>   <td></td> </tr>
+<tr bgcolor="a7f3e7">  <td>22/09/12 00:00:56</td>   <td>-13373</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1330411679</td>   <td></td> </tr>
+<tr bgcolor="a7f3e7">  <td>22/09/12 00:01:14</td>   <td>4671</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.bankguru.TC_Login@6fd77352]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1330411679</td>   <td></td> </tr>
 </table>
